blogs/src/posts/envoy/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-test
  namespace: default
spec:
  parentRefs:
    - name: gateway-a
      sectionName: http
      kind: Gateway
      namespace: envoy-gateway-system
  hostnames:
    - envoy.test.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx1-test
  namespace: default
spec:
  parentRefs:
    - name: gateway-a
      sectionName: http
      kind: Gateway
      namespace: envoy-gateway-system
  hostnames:
    - envoy1.test.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx1
          port: 80
